samples/_failures_safe/1761073177_cd4365_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_76d8a611.c: In function ‘main’:
./samples/SAFE/__tmp_76d8a611.c:161:12: error: missing terminating " character
  161 |     printf("Enter number of nodes (1-100
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_76d8a611.c:161:5: error: expected expression at end of input
  161 |     printf("Enter number of nodes (1-100
      |     ^~~~~~
./samples/SAFE/__tmp_76d8a611.c:161:5: error: expected declaration or statement at end of input
